RESOLVED FIXED34073
Cleanup: Fix misspelled words in comments.
https://bugs.webkit.org/show_bug.cgi?id=34073
Summary Cleanup: Fix misspelled words in comments.
Daniel Bates
Reported 2010-01-25 00:37:57 PST
We should fix misspelled words within comments so that comments read well (or at least better than they did).
Attachments
Patch (64.97 KB, patch)
2010-01-25 00:39 PST, Daniel Bates
no flags
Patch (65.28 KB, patch)
2010-01-25 00:47 PST, Daniel Bates
abarth: review+
Daniel Bates
Comment 1 2010-01-25 00:39:36 PST
WebKit Review Bot
Comment 2 2010-01-25 00:41:19 PST
Attachment 47322 [details] did not pass style-queue: Failed to run "WebKitTools/Scripts/check-webkit-style" exit_code: 1 WebCore/notifications/NotificationPresenter.h:51: One space before end of line comments [whitespace/comments] [5] WebCore/platform/graphics/mac/GraphicsLayerCA.h:321: One space before end of line comments [whitespace/comments] [5] Total errors found: 2 If any of these errors are false positives, please file a bug against check-webkit-style.
Daniel Bates
Comment 3 2010-01-25 00:47:47 PST
Created attachment 47323 [details] Patch Fix style errors found by style bot as well as some that it missed but were around the same area as the ones it found.
Adam Barth
Comment 4 2010-01-25 03:14:22 PST
Comment on attachment 47323 [details] Patch dbates = teh awesome
Daniel Bates
Comment 5 2010-01-25 11:20:29 PST
Note You need to log in before you can comment on or make changes to this bug.